<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">首页</string>
    <string name="title_data">数据</string>
    <string name="title_analysis">分析</string>
    <string name="title_account">帐号</string>
    <string name="title_monitor">监测</string>
    <string name="title_device">设备</string>
    <string name="title_security">安全</string>
    <string name="title_warning">预警</string>
    <string name="title_predict">预测</string>

    <!-- Login页面字符串 -->
    <string name="activity_login_main_username_hint">用户名/手机/邮箱</string>
    <string name="activity_login_main_password_hint">请输入密码</string>
    <string name="activity_login_main_login_button_text">登录</string>
    <string name="activity_login_main_findpassword_button_text">找回密码</string>
    <string name="activity_login_main_register_button_text">注册</string>
    
    <!-- Register页面字符串 -->
    <string name="activity_register_main_username_hint">请输入用户名</string>
    <string name="activity_register_main_phonenumber_hint">请输入手机号码</string>
    <string name="activity_register_main_captcha_hint">请输入验证码</string>
    <string name="activity_register_main_email_hint">请输入邮箱地址</string>
    <string name="activity_register_main_password_hint">请输入密码</string>
    <string name="activity_register_main_confirm_password_hint">请再次输入密码</string>
    <string name="activity_register_main_get_captcha_text">获取验证码</string>
    <string name="activity_register_main_register_button_text">注册</string>

    <string name="register_activity_sent_captcha">验证码已发送，请注意查收！</string>
    <string name="register_activity_no_username">用户名不能为空</string>
    <string name="register_activity_no_phone">手机号码不能为空</string>
    <string name="register_activity_no_captcha">验证码不能为空</string>
    <string name="register_activity_no_email">邮箱地址不能为空</string>
    <string name="register_activity_no_password">密码不能为空</string>
    <string name="register_activity_no_confirm_password">确认密码不能为空</string>
    <string name="register_activity_password_unmatched">两次输入的密码不一致</string>
    <string name="register_activity_register_successfully">注册成功！正在跳转回登录页面…</string>
    <string name="register_activity_register_failure_username_exist">注册失败，用户名已存在！</string>

    <!-- Retrieve Password页面字符串 -->
    <string name="activity_retrieve_password_main_username_hint">用户名</string>
    <string name="activity_retrieve_password_main_phone_or_email_hint">请输入手机号码/邮箱地址</string>
    <string name="activity_retrieve_password_main_captcha_hint">请输入验证码</string>
    <string name="activity_retrieve_password_main_password_hint">请输入新密码</string>
    <string name="activity_retrieve_password_main_confirm_password_hint">请再次输入新密码</string>
    <string name="activity_retrieve_password_main_confirm_button_text">确定</string>
    <string name="retrieve_password_activity_retrieve_successfully">密码重置成功！正在跳转回登陆页面…</string>
    <string name="retrieve_password_activity_retrieve_failure_username_not_exist">不存在该用户，请重试</string>

    <!-- 数据监测页面相关字符串 -->
    <string name="fragment_data_reservoir_level_text">水库水位</string>
    <string name="fragment_data_dam_deformation_text">大坝变形</string>
    <string name="fragment_data_hydro_meteorology_text">水文气象</string>
    <string name="fragment_data_dam_stress_text">大坝应力</string>
    <string name="fragment_data_dam_seepage_text">大坝渗流</string>
    <string name="fragment_data_water_diversion_system_text">引水系统</string>
    <string name="fragment_data_video_surveillance_text">视频监控</string>
    <string name="fragment_data_uav_text">无人机</string>
    <string name="fragment_data_water_quality_text">水库水质</string>
    <string name="fragment_data_surface_deformation">表面形变</string>
    <string name="fragment_data_internal_deformation">内部形变</string>


    <!-- 监测——视频监控Activity 相关字符串 -->
    <string name="activity_video_surveillance_title_text">监测-视频监控</string>

    <!-- 监测——无人机巡查Activity相关字符串 -->
    <string name="activity_uav_patrol_title_text">监测-无人机巡查</string>


    <string name="activity_dam_stress_title">监测-大坝应力</string>

    <string name="logout">退出登录</string>
    <string name="dam_stress_text">最大应力： \n最小应力： \n拉应力：</string>
    <string name="activity_dam_seepage_title">监测-大坝渗流</string>
    <string name="activity_water_diversion_title">监测-引水系统</string>
    <string name="activity_water_quality_title">监测-水库水质</string>

    <!-- 水文气象 -->
    <string name="activity_water_weather_title">监测-水文气象</string>
    <string name="activity_water_weather_weather_text">气象</string>
    <string name="activity_water_weather_weather_graph_text">气象-曲线图</string>
    <string name="activity_water_weather_week_weather_graph_title_text">未来7天最高、最低气温变化(°)</string>
    <string name="activity_water_weather_month_weather_graph_title_text">未来30天最高、最低气温变化(°)</string>
    <string name="activity_water_weather_week_hydrology_graph_title_text">未来7天降雨量、蒸发量变化(mm)</string>
    <string name="activity_water_weather_month_hydrology_graph_title_text">未来30天降雨量、蒸发量变化(mm)</string>
    <string name="activity_water_weather_hydrology_text">水文</string>
    <string name="activity_water_weather_hydrology_graph_text">水文-曲线图</string>
    <string name="activity_water_weather_weather_graph_max_temperature_text">最高气温</string>
    <string name="activity_water_weather_weather_graph_min_temperature_text">最低气温</string>
    <string name="activity_water_weather_weather_graph_avg_temperature_text">平均气温</string>
    <string name="activity_water_weather_hydrology_graph_rainfall_capacity_text">降雨量</string>
    <string name="activity_water_weather_hydrology_graph_evaporation_capacity_text">蒸发量</string>
    <string name="activity_water_weather_hydrology_graph_inflow_capacity_text">来水量</string>
    <string name="activity_water_weather_hydrology_graph_useWater_capacity_text">用水量</string>
    <string name="activity_water_weather_hydrology_graph_amountOfWater_capacity_text">泄洪量</string>

    <!-- 水库水位 -->
    <string name="activity_reservoir_level_title">监测-水库水位</string>
    <string name="activity_reservoir_level_text">水位</string>
    <string name="activity_reservoir_level_graph_text">水位-曲线图</string>
    <string name="activity_reservoir_level_graph_week_title_text">7天水库水位变化(m)</string>
    <string name="activity_reservoir_level_graph_month_title_text">30天水库水位变化(m)</string>
    <string name="activity_reservoir_level_graph_year_title_text">12个月水库水位变化(m)</string>

    <!-- 大坝变形 -->
    <string name="activity_dam_deformation_surface_title_text">监测-大坝表面变形</string>
    <string name="activity_dam_deformation_internel_title_text">监测-大坝内部变形</string>
    <string name="activity_dam_deformation_horizontal_distribute_button_text">水平位移分布图</string>
    <string name="activity_dam_deformation_vertial_distribute_button_title_text">垂直位移分布图</string>
    <string name="activity_dam_deformation_surface_subtitle_text">大坝表面变形监测点布置图</string>
    <string name="activity_dam_deformation_internel_subtitle_text">大坝内部变形检测点布置图</string>
    <string name="activity_dam_monitor_graph_week_horizontal_offset_text">7天水平位移变化(mm)</string>
    <string name="activity_dam_monitor_graph_month_horizontal_offset_text">30天水平位移变化(mm)</string>
    <string name="activity_dam_monitor_graph_year_horizontal_offset_text">12个月水平位移变化(mm)</string>
    <string name="activity_dam_monitor_graph_week_vertical_offset_text">7天垂直位移变化(mm)</string>
    <string name="activity_dam_monitor_graph_month_vertical_offset_text">30天垂直位移变化(mm)</string>
    <string name="activity_dam_monitor_graph_year_vertical_offset_text">12个月垂直位移变化(mm)</string>
    <string name="activity_dam_offset_distribution_surface_horizontal_subtitle_text">大坝表面水平位移空间分布图</string>
    <string name="activity_dam_offset_distribution_surface_vertical_subtitle_text">大坝表面垂直位移空间分布图</string>
    <string name="activity_dam_offset_distribution_internel_horizontal_subtitle_text">大坝内部水平位移空间分布图</string>
    <string name="activity_dam_offset_distribution_internel_vertical_subtitle_text">大坝内部垂直位移空间分布图</string>
</resources>
