<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/drawable_icon_home_selector"
        android:title="@string/title_home"
        app:showAsAction="never"/>


    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/drawable_icon_data_selector"
        android:title="@string/title_data"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/drawable_icon_analysis_selector"
        android:title="@string/title_analysis"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/drawable_icon_account_selector"
        android:title="@string/title_account"
        app:showAsAction="never"/>

</menu>
