<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@color/activity_water_weather_item_background"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:background="@color/activity_water_weather_weather_graph_max_temperature_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/activity_water_weather_weather_graph_max_temperature_text"
                android:textColor="#FFFFFF"/>

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_marginStart="20dp"
                android:background="@color/activity_water_weather_weather_graph_min_temperature_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/activity_water_weather_weather_graph_min_temperature_text"
                android:textColor="#FFFFFF"/>

            <View
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_marginStart="20dp"
                android:background="@color/activity_water_weather_weather_graph_avg_temperature_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/activity_water_weather_weather_graph_avg_temperature_text"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/activity_water_weather_week_weather_graph_title_text"
            android:textSize="12sp"
            android:textColor="#5F5F5F"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/activity_water_weather_main_temperature_chart1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/activity_water_weather_month_weather_graph_title_text"
            android:textSize="12sp"
            android:textColor="#5F5F5F"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/activity_water_weather_main_temperature_chart2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>